Настроена адаптивность для модуля Новые статьи

--- a/src/index.html
+++ b/src/index.html
@@ -386,7 +386,7 @@
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
                                         <div class="wrap_new_img">
-<!--                                            <img src="images/content/mod_news/new_3.jpg" alt="">-->
+                                            <!--                                            <img src="images/content/mod_news/new_3.jpg" alt="">-->
                                             <img src="images/content/articles/art_img1.jpg" alt="">
                                         </div>
                                         <div class="wrap_new_text">
@@ -2223,7 +2223,8 @@
                                         <div class="tabs">
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="nav-item">
-                                                    <a class="nav-link active" data-toggle="tab" href="#block_cards_info1">
+                                                    <a class="nav-link active" data-toggle="tab"
+                                                       href="#block_cards_info1">
                                                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                                                         <span>Инфо</span>
                                                     </a>
@@ -2298,7 +2299,8 @@
                                         <div class="tabs">
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="nav-item">
-                                                    <a class="nav-link active" data-toggle="tab" href="#block_cards_info2">
+                                                    <a class="nav-link active" data-toggle="tab"
+                                                       href="#block_cards_info2">
                                                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                                                         <span>Инфо</span>
                                                     </a>
@@ -2373,7 +2375,8 @@
                                         <div class="tabs">
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="nav-item">
-                                                    <a class="nav-link active" data-toggle="tab" href="#block_cards_info3">
+                                                    <a class="nav-link active" data-toggle="tab"
+                                                       href="#block_cards_info3">
                                                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                                                         <span>Инфо</span>
                                                     </a>
@@ -2448,7 +2451,8 @@
                                         <div class="tabs">
                                             <ul class="nav nav-tabs nav-justified">
                                                 <li class="nav-item">
-                                                    <a class="nav-link active" data-toggle="tab" href="#block_cards_info4">
+                                                    <a class="nav-link active" data-toggle="tab"
+                                                       href="#block_cards_info4">
                                                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                                                         <span>Инфо</span>
                                                     </a>
@@ -2548,72 +2552,180 @@
             <div id="mod_new_articles">
                 <div class="mod_title">
                     <h2>Новые статьи</h2>
+                    <div class="link_help">
+                        <a href=""><span>Как сюда попасть?</span></a>
+                    </div>
                 </div>
                 <div class="block_articles">
-                    <div class="article">
-                        <a class="img" href="#">
-                            <img src="images/content/mod_new_articles/image1.jpg" alt="">
-                        </a>
-                        <div class="data">
-                            24 января 2019
+                    <div class="row">
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="article">
+                                <div class="wrap_article">
+                                    <img src="images/content/mod_new_articles/image1.jpg" alt="">
+                                    <div class="content">
+                                        <div class="data">
+                                            24 января 2019
+                                        </div>
+                                        <div class="title">
+                                            <h3>
+                                                <a href="#">
+                                                    Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                                    Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                                </a>
+                                            </h3>
+                                        </div>
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusantium
+                                                alias
+                                                autem beatae consequuntur cupiditate deleniti dolor ipsam minima numquam
+                                                odio
+                                                quis recusandae rem repellat saepe sit suscipit! Et, exercitationem.</p>
+                                            <p>Aliquid consequatur debitis et facere in mollitia, nesciunt nisi nostrum
+                                                sit
+                                                vel
+                                                velit, veritatis! Autem dignissimos fuga quaerat repellendus rerum sed?
+                                                Alias
+                                                asperiores autem dolores ea in modi necessitatibus velit.</p>
+                                        </div>
+                                    </div>
+                                    <div class="button-more">
+                                        <a href="">
+                                            <span>Подробнее</span>
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div><!--end .wrap_article-->
+                            </div><!--end /.article-->
                         </div>
-                        <div class="title">
-                            <a href="#">
-                                Отправляясь в поход с вашим питомцем учтите эти особенности...
-                            </a>
-
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="article">
+                                <div class="wrap_article">
+                                    <img src="images/content/mod_new_articles/image2.jpg" alt="">
+                                    <div class="content">
+                                        <div class="data">
+                                            24 января 2019
+                                        </div>
+                                        <div class="title">
+                                            <h3>
+                                                <a href="#">
+                                                    Как обучить собаку поведению в общественном транспорте?
+                                                </a>
+                                            </h3>
+                                        </div>
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusantium
+                                                alias
+                                                autem beatae consequuntur cupiditate deleniti dolor ipsam minima numquam
+                                                odio
+                                                quis recusandae rem repellat saepe sit suscipit! Et, exercitationem.</p>
+                                            <p>Aliquid consequatur debitis et facere in mollitia, nesciunt nisi nostrum
+                                                sit
+                                                vel
+                                                velit, veritatis! Autem dignissimos fuga quaerat repellendus rerum sed?
+                                                Alias
+                                                asperiores autem dolores ea in modi necessitatibus velit.</p>
+                                        </div>
+                                    </div>
+                                    <div class="button-more">
+                                        <a href="">
+                                            <span>Подробнее</span>
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div><!--end .wrap_article-->
+                            </div><!--end /.article-->
                         </div>
-                    </div><!--end /.article-->
-                    <div class="article">
-                        <a class="img" href="#">
-                            <img src="images/content/mod_new_articles/image1.jpg" alt="">
-                        </a>
-                        <div class="data">
-                            24 января 2019
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="article">
+                                <div class="wrap_article">
+                                    <img src="images/content/mod_new_articles/image3.jpg" alt="">
+                                    <div class="content">
+                                        <div class="data">
+                                            24 января 2019
+                                        </div>
+                                        <div class="title">
+                                            <h3>
+                                                <a href="#">
+                                                    Зачем собаке переноска и как правильно ее выбрать?
+                                                </a>
+                                            </h3>
+                                        </div>
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusantium
+                                                alias
+                                                autem beatae consequuntur cupiditate deleniti dolor ipsam minima numquam
+                                                odio
+                                                quis recusandae rem repellat saepe sit suscipit! Et, exercitationem.</p>
+                                            <p>Aliquid consequatur debitis et facere in mollitia, nesciunt nisi nostrum
+                                                sit
+                                                vel
+                                                velit, veritatis! Autem dignissimos fuga quaerat repellendus rerum sed?
+                                                Alias
+                                                asperiores autem dolores ea in modi necessitatibus velit.</p>
+                                        </div>
+                                    </div>
+                                    <div class="button-more">
+                                        <a href="">
+                                            <span>Подробнее</span>
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div><!--end .wrap_article-->
+                            </div><!--end /.article-->
                         </div>
-                        <div class="title">
-                            <a href="#">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi aspernatur
-                                aut cupiditate debitis distinctio, exercitationem incidunt itaque minima, nihil nostrum
-                                odit officia, possimus qui veritatis voluptatem. Esse, maxime.
-                            </a>
-
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="article">
+                                <div class="wrap_article">
+                                    <img src="images/content/mod_new_articles/image4.jpg" alt="">
+                                    <div class="content">
+                                        <div class="data">
+                                            24 января 2019
+                                        </div>
+                                        <div class="title">
+                                            <h3>
+                                                <a href="#">
+                                                    Отправляясь в поход с вашим питомцем учтите эти особенности...
+                                                </a>
+                                            </h3>
+                                        </div>
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusantium
+                                                alias
+                                                autem beatae consequuntur cupiditate deleniti dolor ipsam minima numquam
+                                                odio
+                                                quis recusandae rem repellat saepe sit suscipit! Et, exercitationem.</p>
+                                            <p>Aliquid consequatur debitis et facere in mollitia, nesciunt nisi nostrum
+                                                sit
+                                                vel
+                                                velit, veritatis! Autem dignissimos fuga quaerat repellendus rerum sed?
+                                                Alias
+                                                asperiores autem dolores ea in modi necessitatibus velit.</p>
+                                        </div>
+                                    </div>
+                                    <div class="button-more">
+                                        <a href="">
+                                            <span>Подробнее</span>
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div><!--end .wrap_article-->
+                            </div><!--end /.article-->
                         </div>
-                    </div><!--end /.article-->
-                    <div class="article">
-                        <a class="img" href="#">
-                            <img src="images/content/mod_new_articles/image1.jpg" alt="">
-                        </a>
-                        <div class="data">
-                            24 января 2019
-                        </div>
-                        <div class="title">
-                            <a href="#">
-                                Отправляясь в поход с вашим питомцем учтите эти особенности...
-                            </a>
-
-                        </div>
-                    </div><!--end /.article-->
-                    <div class="article">
-                        <a class="img" href="#">
-                            <img src="images/content/mod_new_articles/image1.jpg" alt="">
-                        </a>
-                        <div class="data">
-                            24 января 2019
-                        </div>
-                        <div class="title">
-                            <a href="#">
-                                Отправляясь в поход с вашим питомцем учтите эти особенности...
-                            </a>
-
-                        </div>
-                    </div><!--end /.article-->
+                    </div>
                 </div><!--end /.block_articles-->
-                <div class="all_articles">
-                    <a href="">
-                        <i class="fa fa-eye" aria-hidden="true"></i>
-                        <span>Смотреть все статьи</span>
-                    </a>
+                <div class="mod_links">
+                    <div class="add_post">
+                        <a href="">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <span>Добавить статью</span>
+                        </a>
+                    </div>
+                    <div class="all_post">
+                        <a href="">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <span>Смотреть все статьи</span>
+                        </a>
+                    </div>
 
                 </div>
             </div><!--end /#mod_new_articles -->
