Добавлены стили для контактов карточки модуля Продажа щенков

--- a/src/index.html
+++ b/src/index.html
@@ -581,6 +581,10 @@
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
                                                         </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -672,6 +676,10 @@
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
                                                         </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -761,6 +769,10 @@
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
                                                         </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -849,6 +861,10 @@
                                                         <div class="skype">
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
+                                                        </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2258,6 +2274,10 @@
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
                                                         </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2333,6 +2353,10 @@
                                                         <div class="skype">
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
+                                                        </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2410,6 +2434,10 @@
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
                                                         </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2485,6 +2513,10 @@
                                                         <div class="skype">
                                                             <i class="fa fa-skype" aria-hidden="true"></i>
                                                             <span>i.petroc</span>
+                                                        </div>
+                                                        <div class="email">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                            <span>i.petroc@mail.ru</span>
                                                         </div>
                                                     </div>
                                                 </div>
