Изменён вывод метаинформации статьи в списке статей

--- a/src/articles.html
+++ b/src/articles.html
@@ -664,68 +664,71 @@
                                         <span>Метки:</span>
                                         <ul>
                                             <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Чемпиор России</a>
+                                                <a href="#">
+                                                    <i class="fa fa-tag" aria-hidden="true"></i>
+                                                    <span>Чемпион России</span>
+                                                </a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Юный чемпион Беларуси</a>
+
+                                                <a href="#">
+                                                    <i class="fa fa-tag" aria-hidden="true"></i>
+                                                    <span>Юный чемпион Беларуси</span>
+                                                </a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Чистокровный</a>
+                                                <a href="#">
+                                                    <i class="fa fa-tag" aria-hidden="true"></i>
+                                                    <span>Чистокровный</span>
+                                                </a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Арион Лотас</a>
+                                                <a href="#">
+                                                    <i class="fa fa-tag" aria-hidden="true"></i>
+                                                    <span>Арион Лотас</span>
+                                                </a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Европейский питомник</a>
-                                            </li>
-                                            <li>
-                                                <i class="fa fa-tag" aria-hidden="true"></i>
-                                                <a href="#">Европейский питомник</a>
+                                                <a href="#">
+                                                    <i class="fa fa-tag" aria-hidden="true"></i>
+                                                    <span>Европейский питомник</span>
+                                                </a>
                                             </li>
                                         </ul>
                                     </div><!-- end /.tags -->
                                     <div class="statistic">
-                                        <div class="views">
+                                        <div class="views" title="Просмотров">
                                             <i class="fa fa-eye" aria-hidden="true"></i>
-                                            <span>Просмотров:</span>
                                             <span>256</span>
                                         </div><!-- end /.views -->
-                                        <div class="comments">
+                                        <div class="comments" title="Комментариев">
                                             <i class="fa fa-comments" aria-hidden="true"></i>
-                                            <span>Комментариев:</span>
                                             <span>147</span>
                                         </div><!-- end /.comments -->
-                                        <div class="likes">
+                                        <div class="likes" title="Оценок">
                                             <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                            <span>Оценок:</span>
                                             <span>247</span>
                                         </div><!-- end /.comments -->
-                                        <div class="bookmarks">
+                                        <div class="bookmarks" title="В закладках">
                                             <i class="fa fa-bookmark" aria-hidden="true"></i>
-                                            <span>В закладках:</span>
                                             <span>353</span>
                                         </div><!-- end /.comments -->
-
+                                        <div class="follow" title="Наблюдают">
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                            <span>1</span>
+                                        </div>
                                     </div><!-- end /.statistic -->
                                     <div class="datetime">
-                                        <div class="createdate">
+                                        <div class="createdate" title="Создано">
                                             <i class="fa fa-calendar-plus-o" aria-hidden="true"></i>
-                                            <span>Создано:</span>
                                             <span>17 окт 2019</span>
                                         </div><!-- end /.createdate -->
-                                        <div class="editdate">
+                                        <div class="editdate" title="Изменено">
                                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                            <span>Изменено:</span>
                                             <span>17 окт 2019</span>
                                         </div><!-- end /.editdate -->
-                                        <div class="enddate">
+                                        <div class="enddate" title="Истекает">
                                             <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                            <span>Истекает:</span>
                                             <span>20 нояб 2019</span>
                                         </div><!-- end /.enddate -->
                                     </div><!-- end /.datetime -->
@@ -1235,6 +1238,7 @@
 
 <script src="libs/jquery/jquery-3.3.1.min.js"></script>
 <script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+<script src="libs/bootstrap-4.1.3-dist/js/bootstrap.bundle.min.js"></script>
 <script src="libs/owl-сarousel2-2.3.4/js/owl.carousel.min.js"></script>
 <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
 <script src="js/common.js"></script>
