--- a/src/profile.html
+++ b/src/profile.html
@@ -16,7 +16,7 @@
     <title>Заголовок</title>
     <link rel="shortcut icon" href="favicon.png"/>
     <!-- Bootstrap -->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+    <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
     <link rel="stylesheet" href="libs/bootstrap-4.1.3-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="libs/owl-сarousel2-2.3.4/css/owl.carousel.min.css">
@@ -156,79 +156,40 @@
                 </div>
                 <div class="menu_block">
                     <div id="key" class="key">
-                        <i class="fa fa-key fa-lg" aria-hidden="true"></i>
-                        <span>Вход</span>
+                        <i class="fa fa-user-circle fa-lg" aria-hidden="true"></i>
+                        <span>Профиль</span>
                     </div>
                     <div id="search" class="search"><i class="fa fa-search fa-lg" aria-hidden="true"></i>
                         <span>Поиск</span>
                     </div>
                     <div class="key_form">
-                        <form action="/" method="post" id="login-form" class="form-inline">
-                            <div class="form_icon">
-                                <img src="images/header/login_form/dog_form.png" alt="" width="70px" height="110px">
-                            </div>
-                            <div class="userdata">
-                                <div id="form-login-username" class="control-group">
-                                    <div class="controls">
-                                        <div class="input-prepend">
-						                    <span class="user-icon">
-                                                <i class="fa fa-user-o" aria-hidden="true"></i>
-						                    </span>
-                                            <input id="modlgn-username" type="text" name="username" class="input-small"
-                                                   tabindex="0" size="18" placeholder="Логин">
-                                        </div>
-                                    </div>
+                        <div class="user-greeting">
+                            <form action="/index.php?option=com_cobalt&amp;view=records&amp;section_id=16:pomoshch-i-podderzhka&amp;Itemid=193" method="post" id="login-form" class="form-vertical">
+                                <div class="login-greeting">
+                                    Здравствуйте, Super User
                                 </div>
-                                <div id="form-login-password" class="control-group">
-                                    <div class="controls">
-                                        <div class="input-prepend">
-                                            <span class="key-icon">
-                                                <i class="fa fa-key" aria-hidden="true"></i>
-                                            </span>
-                                            <input id="psw" type="password" name="password"
-                                                   class="input-small" tabindex="0" size="18" placeholder="Пароль">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="form-login-remember" class="control-group checkbox">
-                                    <input id="modlgn-remember" type="checkbox" name="remember"
-                                           value="yes">
-                                    <label for="modlgn-remember" class="control-label">Запомнить меня</label>
-
-                                </div>
-                                <ul class="unstyled">
-                                    <li>
-                                        <a href="/component/users/?view=remind&amp;Itemid=101">
-                                            Забыли логин?</a>
-                                    </li>
-                                    <li>
-                                        <a href="/component/users/?view=reset&amp;Itemid=101">
-                                            Забыли пароль?</a>
-                                    </li>
-                                </ul>
-                                <div id="form-login-submit" class="control-group">
-                                    <div class="controls">
-                                        <div class="button_registr">
-                                            <a href="/component/users/?view=registration&amp;Itemid=101">
-                                                <i class="fa fa-user-plus" aria-hidden="true"></i>
-                                                <span>Регистрация</span>
+                                <div class="login-action">
+                                    <ul class="unstyled">
+                                        <li>
+                                            <a href="/index.php?option=com_users&amp;view=profile&amp;Itemid=101">
+                                                <i class="fa fa-eye fa-lg" aria-hidden="true"></i>
+                                                <span>Показать профиль</span>
                                             </a>
-                                        </div>
-                                        <button type="submit" tabindex="0" name="Submit"
-                                                class="login-button"><i class="fa fa-sign-in fa-lg"
-                                                                        aria-hidden="true"></i>
-                                            Войти
-                                        </button>
+                                        </li>
+                                    </ul>
+                                    <div class="logout-button">
+                                        <a href="#" onclick="document.getElementById('login-form').submit(); return false;">
+                                            <i class="fa fa-sign-out fa-lg" aria-hidden="true"></i>
+                                            <span>Выход</span>
+                                        </a>
                                     </div>
                                 </div>
-
                                 <input type="hidden" name="option" value="com_users">
-                                <input type="hidden" name="task" value="user.login">
-                                <input type="hidden" name="return" value="aHR0cDovL3Byb2RvZ3MubG9jLw==">
-                                <input type="hidden" name="a2e9005004fbefb78dadaf2a7b22915d" value="1">
-                            </div>
-
-                        </form>
+                                <input type="hidden" name="task" value="user.logout">
+                                <input type="hidden" name="return" value="aHR0cDovL3Byb2RvZ3MubG9jL2luZGV4LnBocD9vcHRpb249Y29tX2NvYmFsdCZ2aWV3PXJlY29yZHMmc2VjdGlvbl9pZD0xNjpwb21vc2hjaC1pLXBvZGRlcnpoa2EmSXRlbWlkPTE5Mw==">
+                                <input type="hidden" name="e6f244880822a7c86ba33521fb6dc6e1" value="1">
+                            </form>
+                        </div><!-- end .user-greeting  -->
                     </div>
                     <div class="search_form">
                         <form action="/" method="post" class="form-inline">
