Изменёна прокрутка в карточке Щенка

--- a/src/index.html
+++ b/src/index.html
@@ -871,9 +871,9 @@
 
                                             <!-- Tab panes -->
                                             <div class="tab-content">
-                                                <div data-spy="scroll" data-offset="0" class="scrollspy">
                                                     <div role="tabpanel" class="tab-pane fade show active" id="desc">
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                        <div data-spy="scroll" data-offset="0" class="scrollspy">
+                                                        <p>111Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                                             Asperiores aspernatur assumenda atque consequuntur earum
                                                             itaque
                                                             magnam nihil quasi recusandae repudiandae! Accusamus aliquid
